ecmascript/parser/tests/test262-error-references/fail/3a9fa392421db6dd.js.stderr
error: Expected ], got ,
 --> $DIR/tests/test262-parser/fail/3a9fa392421db6dd.js:1:5
  |
1 | ({[a,b]:0})
  |     ^

